force-app/main/default/objects/MS_FSM_EtaHub_Asset_Staging__c/MS_FSM_EtaHub_Asset_Staging__c.object-meta.xml
<CustomObject>
    <description>INTEGRATION ONLY - This table holds Ids from EtaHub to be processed into the Asset and Asset Transaction Log table.</description>
    <label>EtaHub Asset Staging</label>
    <nameField>
        <displayFormat>EAS-{0000}</displayFormat>
        <label>EtaHub Asset Transaction Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EtaHub Asset Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>