force-app/main/default/objects/MS_FSM_EtaHub_Asset_Staging__c/fields/MS_FSM_Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Asset_Id__c</fullName>
    <description>Salesforce Asset Id provided by EtaHub</description>
    <label>Asset Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>