force-app/main/default/objects/MS_FSM_EtaHub_Asset_Staging__c/fields/MS_FSM_Asset_Placement__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Asset_Placement__c</fullName>
    <description>INT or EXH</description>
    <label>Asset Placement</label>
    <length>25</length>
    <type>Text</type>
</CustomField>