force-app/main/default/objects/MS_FSM_EtaHub_Asset_Staging__c/fields/MS_FSM_Asset_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Asset_Serial_Number__c</fullName>
    <description>Serial Number of the asset transacting on.</description>
    <label>Asset Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>