force-app/main/default/objects/MS_FSM_EtaHub_Asset_Staging__c/fields/MS_FSM_Description__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Description__c</fullName>
    <description>stores the product description from an EtaHub Staging Record</description>
    <label>Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>