force-app/main/default/objects/MS_FSM_EtaHub_Asset_Staging__c/fields/MS_FSM_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Error_Message__c</fullName>
    <description>Purpose of this field is to capture the details of the error message when the transaction fails.</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>