force-app/main/default/objects/MS_FSM_EtaHub_Asset_Staging__c/fields/MS_FSM_EtaHub_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_EtaHub_Record_Id__c</fullName>
    <description>Record Id of the EtaHub transaction.</description>
    <label>EtaHub Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>