force-app/main/default/objects/MS_FSM_EtaHub_Asset_Staging__c/fields/MS_FSM_Is_New_Asset_Record__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Is_New_Asset_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is New Asset Record?</label>
    <type>Checkbox</type>
</CustomField>