force-app/main/default/objects/MS_FSM_EtaHub_Asset_Staging__c/fields/MS_FSM_Method_of_Creation__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Method_of_Creation__c</fullName>
    <description>Used to define which process created the EtaHub Asset Staging record. Upgrades workspace is in EtaHub. Rebuild Asset is fired off a button the Asset in FSM and triggers an update in EtaHub to create staging records</description>
    <label>Method of Creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upgrades</fullName>
            </value>
            <value>
                <fullName>Rebuild Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>