force-app/main/default/objects/MS_FSM_EtaHub_Asset_Staging__c/fields/MS_FSM_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Part_Number__c</fullName>
    <description>Used for Product2 mapping</description>
    <label>Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>