force-app/main/default/objects/MS_FSM_EtaHub_Asset_Staging__c/fields/MS_FSM_Quantity__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Quantity__c</fullName>
    <description>Quantity for batched assets</description>
    <label>Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>