force-app/main/default/objects/MS_FSM_EtaHub_Asset_Staging__c/fields/MS_FSM_Removal_Disposition__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Removal_Disposition__c</fullName>
    <description>Disposition when the asset is removed.</description>
    <label>Removal Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>