force-app/main/default/objects/MS_FSM_EtaHub_Asset_Staging__c/fields/MS_FSM_Root_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Root_Serial_Number__c</fullName>
    <description>stores the root serial number of a product from an Etahub Staging record</description>
    <label>Root Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>