force-app/main/default/objects/MS_FSM_EtaHub_Asset_Staging__c/fields/MS_FSM_Stage__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Stage__c</fullName>
    <description>Used within the Asset Trigger helper to define the stage of the integration processing done in MS_FSM_EHINT_AssetStagingTriggerHelper</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Processed - New Asset</fullName>
            </value>
            <value>
                <fullName>Processed - Later ATL Found - New ATL Only</fullName>
            </value>
            <value>
                <fullName>Processed - New ATL and Asset Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>