force-app/main/default/objects/MS_FSM_EtaHub_Asset_Staging__c/fields/MS_FSM_Status__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Status__c</fullName>
    <description>Either installed or obsolete status for the asset</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>