force-app/main/default/objects/MS_FSM_EtaHub_Asset_Staging__c/fields/MS_FSM_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Timestamp__c</fullName>
    <description>Time of the status change.</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>